Module name: s/jdk.scripting.nashorn/org.openjdk.nashorn