@@ -37,7 +37,7 @@ import org.testng.annotations.Test;
  * Tests for JSType methods.
  *
  * @test
- * @modules jdk.scripting.nashorn/jdk.nashorn.internal.runtime
+ * @modules org.openjdk.nashorn/jdk.nashorn.internal.runtime
  * @run testng jdk.nashorn.internal.runtime.test.JSTypeTest
  */
 public class JSTypeTest {
